# practice

./: README.md
c++/RecursionDemo/: CMakeLists.txt  RecursionDemo.cpp
c++/adjacency_list/: CMakeLists.txt  adjacency_list.cpp
c++/binary_search_tree/: CMakeLists.txt  bst.cpp
c++/bounding_box/: CMakeLists.txt  bounding_box.cpp
c++/eval_exp/: CMakeLists.txt  eval_exp.cpp
c++/flood_fill/: CMakeLists.txt  widget.cpp  widget.h
c++/hackathon_project/: CMakeLists.txt  README.md  framebuffer.cpp  framebuffer.h  main.cpp  map.osm  node.cpp  node.h  serial.cpp  serial.h  way.cpp  way.h
c++/linear_algebra_coding/: CMakeLists.txt
c++/linear_algebra_coding/cross_product/: CMakeLists.txt  main_dlg.cpp  main_dlg.h  main_dlg.ui  widget_gl.cpp  widget_gl.h
c++/linear_algebra_coding/eigen_examples/: CMakeLists.txt  main.cpp
c++/linear_algebra_coding/ellipsoid_fit/: CMakeLists.txt  ellipsoid_fit.cpp  mag_data_17_22_03.txt  mag_data_18_57_13.txt  mag_data_20_04_06.txt  mag_data_20_04_41.txt  mag_data_20_12_57.txt  test.txt
c++/linear_algebra_coding/fit_line/: CMakeLists.txt  main_dlg.cpp  main_dlg.h  main_dlg.ui  widget_gl.cpp  widget_gl.h
c++/linear_algebra_coding/fit_plane/: CMakeLists.txt  main_dlg.cpp  main_dlg.h  widget_gl.cpp  widget_gl.h
c++/linear_algebra_coding/sphere/: CMakeLists.txt  main_dlg.ui  widget_gl.cpp  widget_gl.h
c++/linked_list_basics/: CMakeLists.txt  LinkedListDemo.cpp  LinkedListDemo.h  test.txt
c++/linked_list_examples/: CMakeLists.txt  doubly_linked_list.h  doubly_linked_list_example.cpp  queue.h  queue_example.cpp  stack.h  stack_example.cpp
c++/matrix_example/: CMakeLists.txt  tasks.txt
c++/matrix_example/matrix/: CMakeLists.txt  access_elements_test.cpp  add_test.cpp  inplace_transpose_test.cpp  matrix.h  multiply_test.cpp  serialize_deserialize_test.cpp  symmetric_matrix_test.cpp  transpose_test.cpp
c++/matrix_example/operator_overload/: CMakeLists.txt  example0.cpp  example1.cpp  example2.cpp
c++/random_number_shuffling/random_number_shuffling/: CMakeLists.txt  random_number_shuffling.cpp
c++/sorting/: CMakeLists.txt  object_sorting.cpp  pair_sorting.cpp  point_sorting.cpp  record_sorting.cpp
c++/string_graph_theory/: CMakeLists.txt  string_graph_theory.cpp  string_subsets.cpp
opengl/2d_board/: CMakeLists.txt  gl_window.cpp  gl_window.h  main.cpp
opengl/2d_rotation/: CMakeLists.txt  main_dlg.cpp  main_dlg.h  widget_gl.cpp  widget_gl.h
opengl/2d_rotation_and_translation/: CMakeLists.txt  gl_window.cpp  gl_window.h  main.cpp
opengl/2d_rotation_and_translation_without_matrix/: CMakeLists.txt  main_dlg.cpp  main_dlg.h  main_dlg.ui  widget_gl.cpp  widget_gl.h
opengl/2d_trajectory/: CMakeLists.txt  gl_window.cpp  gl_window.h
opengl/3d_rotation/: CMakeLists.txt  dialog.ui  main_dlg.cpp  main_dlg.h  widget_gl.cpp  widget_gl.h
opengl/basics/: CMakeLists.txt  gl_window.cpp
opengl/triangles_gl_draw_array/: CMakeLists.txt  gl_window.cpp  gl_window.h  main.cpp
qt/cluster_image/: main.cpp  widget.cpp  widget.h
qt/examples/animation/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
qt/examples/painting/: CMakeLists.txt  main.cpp  painting_widget.cpp  painting_widget.h
qt/examples/serial_port/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
qt/examples/signals_slots/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
qt/examples/widget/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
qt/exploration/cluster_image/: CMakeLists.txt
qt/flood_fill/: CMakeLists.txt  main.cpp  widget.cpp
qt/maze_path/: CMakeLists.txt  main.cpp  widget.cpp
usaco/: CMakeLists.txt
usaco/Acorn Harvest/: main.cpp
usaco/Bessie's Question/: main.cpp
usaco/COWVID-19/: main.cpp
usaco/Cow Gymnastics/: main.cpp
usaco/Cross-Eyed/: main.cpp
usaco/Escaping/: main.cpp
usaco/Fun With Octal/: main.cpp
usaco/Hoofprints/: main.cpp
usaco/Lifeguards/: main.cpp
usaco/Livestock Lineup/: main.cpp
usaco/Photoshoot/: main.cpp
usaco/Pulleys And Belts/: main.cpp
usaco/Puz/: main.cpp
usaco/Race/: main.cpp
usaco/Record Milking/: main.cpp
usaco/Scheduled Delivery/: main.cpp
usaco/Sleepy Cow Sorting/: main.cpp
usaco/Squirrel Battle/: main.cpp
usaco/Style/: main.cpp
usaco/The Bucket List/: main.cpp
usaco/The Perfect Cow/: main.cpp
usaco/Unlucky Day/: main.cpp
usaco/Voyager/: main.cpp
usaco/Where Am I/: main.cpp
usaco/Word Processor/: main.cpp
