cmake_minimum_required (VERSION 3.8)
project("usaco_practice")
add_executable("MooTimes" "MooTimes/main.cpp")
add_executable("SecretMission" "Secret Mission/main.cpp")
add_executable("PictureGame" "Picture Game/main.cpp")
add_executable("ColorCoding" "Color Coding/main.cpp")
add_executable("AcornShuffle" "Acorn Shuffle/main.cpp")
add_executable("Discow" "Discow/main.cpp")
add_executable("SystemInstallation" "System Installation/main.cpp")
add_executable("MathExpression" "Math Expression/main.cpp")
add_executable("SpringCleaning" "Spring Cleaning/main.cpp")
add_executable("GeneratingTriangles" "Generating Triangles/main.cpp")
add_executable("MilkQueue" "Milk Queue/main.cpp")
add_executable("StoneSwapping" "Stone Swapping/main.cpp")
add_executable("LayeringSod" "Layering Sod/main.cpp")
add_executable("MessageRelay" "Message Relay/main.cpp")
add_executable("FertilizerFever" "Fertilizer Fever/main.cpp")
add_executable("RadarBrands" "Radar Brands/main.cpp")
add_executable("OutOfPlace" "Out Of Place/main.cpp")
add_executable("ElectionTime" "Election Time/main.cpp")
add_executable("CropHarvester" "Crop Harvester/main.cpp")
add_executable("GoodGrass" "Good Grass/main.cpp")
add_executable("Quadrants" "Quadrants/main.cpp")
add_executable("CalfFinding" "Calf Finding/main.cpp")
add_executable("CowCovering" "Cow Covering/main.cpp")
add_executable("WorkingTime" "Working Time/main.cpp")
add_executable("TaskAssignment" "Task Assignment/main.cpp")
add_executable("HornGrassShears" "Horn, Grass, Shears/main.cpp")
add_executable("PlayingTime" "Playing Time/main.cpp")
add_executable("BinarySearch" "Binary Search/main.cpp")
add_executable("MilkSchedule" "Milk Schedule/main.cpp")
add_executable("BallGownFitting" "Ball Gown Fitting/main.cpp")
add_executable("BessiesFinalExam" "Bessie's Final Exam/main.cpp")
add_executable("ConvertToBaseTen" "Convert To Base Ten/main.cpp")
add_executable("ConvertToBaseM" "Convert To Base M/main.cpp")
add_executable("FunWithOctal" "Fun With Octal/main.cpp")
add_executable("TheBucketList" "The Bucket List/main.cpp")
add_executable("Puz" "Puz/main.cpp")
add_executable("ThePerfectCow" "The Perfect Cow/main.cpp")
add_executable("PulleysAndBelts" "Pulleys And Belts/main.cpp")
add_executable("ScheduledDelivery" "Scheduled Delivery/main.cpp")
add_executable("CrossEyed" "Cross-Eyed/main.cpp")
add_executable("UnluckyDay" "Unlucky Day/main.cpp")
add_executable("RecordMilking" "Record Milking/main.cpp")
add_executable("COWVID19" "COWVID-19/main.cpp")
add_executable("AcornHarvest" "Acorn Harvest/main.cpp")
add_executable("Escaping" "Escaping/main.cpp")
add_executable("Style" "Style/main.cpp")
add_executable("SquirrelBattle" "Squirrel Battle/main.cpp")
add_executable("Hoofprints" "Hoofprints/main.cpp")
add_executable("BessiesQuestion" "Bessie's Question/main.cpp")
add_executable("CandyCaneFeast" "USACO CONTEST - Candy Cane Feast/main.cpp")
add_executable("FarmerJohnActuallyFarms" "USACO CONTEST - Farmer John Actually Farms/main.cpp")
add_executable("CowntactTracingTwo" "USACO CONTEST - Cowntact Tracing 2/main.cpp")
add_executable("SleepyCowSorting" "Sleepy Cow Sorting/main.cpp")
add_executable("Lifeguards" "Lifeguards/main.cpp")
add_executable("Voyager" "Voyager/main.cpp")
option(ENABLE_VCPKG OFF)