cmake_minimum_required(VERSION 3.8.2)

project(linear_algebra)

add_subdirectory(../../../helper helper)
add_subdirectory(eigen_examples eigen_examples)
add_subdirectory(cross_product cross_product)
add_subdirectory(fit_line fit_line)
add_subdirectory(fit_plane fit_plane)
add_subdirectory(sphere sphere)
